Fix image data loss in when the transform tool action is applied to quickly

It may happen when the tool is quickly switched to and from
by V shortcut assigned to the Brush Tool.

BUG:460557
BUG:461109